--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "recharts": "^2.12.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.0",
     "@types/express": "^4.17.0",
     "@types/multer": "^1.4.0",
     "@types/node": "^20.0.0",
