--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
+# Frontend Configuration
+# Backend API URL (change this to your deployed backend URL)
+NEXT_PUBLIC_API_URL=http://localhost:3001
+
 # MongoDB Atlas Connection
 # Get this from: MongoDB Atlas → Connect → Drivers
 MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/synapse?retryWrites=true&w=majority
